--- a/Views/adGenerarVales/adGenerarVales.cshtml
+++ b/Views/adGenerarVales/adGenerarVales.cshtml
@@ -116,7 +116,7 @@
                         });
                     },
                     DataDropDownList: function () {
-                        $.get('@Url.Action("ObtenerMobileXCompany", "adGenerarVales")', function (mobiles) {
+                        $.get('@Url.Action("ObtenerMobileXUser", "adGenerarVales")', function (mobiles) {
                             var data = []
 
                             mobiles.forEach((mobile) => {
