--- a/Views/adTutorial/adTutorial.cshtml
+++ b/Views/adTutorial/adTutorial.cshtml
@@ -56,12 +56,12 @@
                     Asignación de vehiculos a usuarios
                 </a>
             </li>
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="nav-link " href="#step-9">
                     <span class="num">9</span>
                     Asignación de Centros de Costo
                 </a>
-            </li>
+            </li>*@
         </ul>
 
         <div class="tab-content">
@@ -92,12 +92,13 @@
             <div id="step-7" class="tab-pane" role="tabpanel" aria-labelledby="step-7">
                 @await Html.PartialAsync("~/Views/adAgregarUsuario/adAgregarUsuario.cshtml");
             </div>
-            <div id="step-8" class="tab-pane" role="tabpanel" aria-labelledby="step-8">
+            <div id="step-8" class="tab-pane" role="tabpanel" aria-labelledby="step-8" style="height:500px;">
                 @await Html.PartialAsync("~/Views/AdUsuariosVehiculos/AdUsuariosVehiculos.cshtml");
             </div>
-            <div id="step-9" class="tab-pane" role="tabpanel" aria-labelledby="step-9">
+            @*<div id="step-9" class="tab-pane" role="tabpanel" aria-labelledby="step-9">
                 @await Html.PartialAsync("~/Views/adAsignacionCentrosCosto/adAsignacionCentrosCosto.cshtml");
-            </div>
+            </div>*@
+        </div>
         </div>
 
         <!-- Include optional progressbar HTML -->
@@ -143,12 +144,17 @@
                         
                         $.get('@Url.Action("ValidarPaso", "adTutorial")', { Paso: _Paso }, function (mensaje) {
                             mensaje = mensaje[0]
-                            console.log(_Paso)
+                            //console.log(_Paso)
                             if (mensaje.bandera === 0) {
                                 $._combustible.alert("error", "Información incompleta", mensaje.resultado)
                             } else {
                                 //$('#smartwizard').smartWizard("prev");
-                                if (_Paso === 8) {
+                                if (_Paso === 6 /*|| _Paso === 7*/) {
+                                    $.ModuloAsignarVehiculos.Grid.dataGrid()
+                                    //$.ModuloAsignacionCentroCosto.CentroCostoUsuario.GRID.DataGrid()
+                                    $('#smartwizard').smartWizard("next");
+                                }
+                                else if (_Paso === 7) {
                                     Swal.fire({
                                         title: "Tutorial terminado",
                                         text: mensaje.resultado,
