--- a/Views/rpLineaTimpoVale/rpLineaTimpoVale.cshtml
+++ b/Views/rpLineaTimpoVale/rpLineaTimpoVale.cshtml
@@ -16,22 +16,25 @@
                 <div class="col-lg-3 col-12">
                     @*<label>Fecha Inicio</label>
                     <input id="FechaIni" />*@
+                    <h5 class="text-center">Seleccione un día</h5>
                     <input id="datepicker"/>
                 </div>
                 @*<div class="col-lg-3 col-12 mt-2 mt-lg-0 offset-lg-2">
                     <label>Fecha Fin</label>
                     <input id="FechaFin" />
                 </div>*@
-                <div class="col-lg-2 col-12 d-flex align-items-end">
+                <div class="col-lg-3 col-12 ">
+                    <h5 class="text-center">Seleccione una placa</h5>
                     <input id="DropDownListPlacas">
                 </div>
 
-                <div class="col-lg-2 col-12 d-flex align-items-end">
+                <div class="col-lg-3 col-12 ">
+                    <h5 class="text-center">Seleccione un estado de vale</h5>
                     <input id="DropDownListEstadoVales">
                 </div>
 
-                <div class="col-lg-2 d-flex align-items-end col-12 mt-2 mt-lg-0">
-                    <button type="button" class="btn btn-success w-100" id="BTN_GenerarReporte"> Generar </button>
+                <div class="col-lg-3 d-flex align-items-end col-12 mt-2 mt-lg-0">
+                    <button type="button" class="btn btn-success w-100" id="BTN_GenerarReporte"><i class="bi bi-bar-chart-line-fill"></i> Generar </button>
                 </div>
             </div>
         </div>
@@ -108,6 +111,9 @@
 
                     if (vales.length === 0) {
                         $._combustible.alert("info", "Sin datos", "No hay vales de su seleccions")
+                        var ContenedorGraficas = $("#ContenedorGrficas")
+                        ContenedorGraficas.empty()
+                        _this.Grafica.Tooltip.EliminarResiduales()
                     } else {
                         _this.Grafica.GenerarGrafica(vales)
                     }
