--- a/Views/rpValePorSubFlota/rpValePorSubFlota.cshtml
+++ b/Views/rpValePorSubFlota/rpValePorSubFlota.cshtml
@@ -16,7 +16,7 @@
         <div class="container-fluid p-4">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="text-center"> Reporte de uso de vales por Sub Flota</h2>
+                    <h2 class="text-center"> Reporte de uso de vales por Subflota</h2>
                 </div>
             </div>
             <div class="row mt-2">
@@ -162,7 +162,7 @@
                                 },
                                 title: {
                                     align: 'center',
-                                    text: 'Top 10 Sub Flotas por ' + variable,
+                                    text: 'Top 10 Subflotas por ' + variable,
                                 },
                                 accessibility: {
                                     announceNewData: {
